--- a/src/views/homepage/homepage.html
+++ b/src/views/homepage/homepage.html
@@ -1,5 +1,4 @@
-<h1>Hello world</h1>
-<div *ngIf="true">
-
-    {{testFunc("final")}}
+<div>
+    <app-navbar></app-navbar>
+    <div class="px-2 py-4 bg-blue-200 text-center ">Accelerate your teams' work with AI features 🤖 now available for all Premium and Enterprise! Learn more.</div>
 </div>
