added the section and video

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,6 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
-  font-family: "Geometrica", sans-serif;
+  font-family: 'Geometrica', sans-serif;
 }
