--- a/src/views/taskpage/taskpage.html
+++ b/src/views/taskpage/taskpage.html
@@ -1,8 +1,8 @@
 <div class="mat-grid">
-  <mat-grid-list cols="3" class="mat-grid1">
-    <mat-grid-tile>
-      <div class="flex flex-col w-full justify-center items-center h-full p-5">
-        <div>Today</div>
+  <mat-grid-list cols="3" gutterSize="16px" rowHeight="1:1" class="mat-grid1">
+    <mat-grid-tile class="column today flex flex flex-col justify-start items-center">
+      <div class="">
+        <div class="column-title">Today</div>
         <app-card
           *ngFor="let card of todayCards"
           [title]="card.title"
@@ -13,9 +13,9 @@
       </div>
     </mat-grid-tile>
 
-    <mat-grid-tile>
-      <div class="flex flex-col w-full justify-center items-center h-full p-5">
-        <div>ThisWeek</div>
+    <mat-grid-tile class="column thisweek">
+      <div>
+        <div class="column-title">ThisWeek</div>
         <app-card
           *ngFor="let card of thisWeekCards"
           [title]="card.title"
@@ -26,9 +26,9 @@
       </div>
     </mat-grid-tile>
 
-    <mat-grid-tile>
-      <div class="flex flex-col w-full justify-center items-center h-full p-5">
-        <div>Later</div>
+    <mat-grid-tile class="column later">
+      <div>
+        <div class="column-title">Later</div>
         <app-card
           *ngFor="let card of laterCards"
           [title]="card.title"
