--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,6 +1,7 @@
 <main class="main">
   <div class="content">
     <!-- <home-page></home-page> -->
+<app-navbar></app-navbar>
     <app-taskpage></app-taskpage>
   </div>
 </main>
